# heat-pump-modelling

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
data/: house.yaml  u_values.yaml
data/weather/: GBR_ENG_London-Heathrow.Intl.AP.037720_TMYx.2011-2025.epw
notebooks/: _build_phase0_viz.py  _build_phase1_viz.py  phase0_visualisations.ipynb  phase1_heat_loss.ipynb
reports/: heat_loss_by_room.html  heat_loss_sankey.html  house_fabric_makeup.html  house_schematic.html  weather_carpet.html  weather_duration_curve.html  weather_monthly_box.html
src/heat_pump_modelling/: __init__.py  heat_loss.py  house.py  models.py  weather.py
tests/: test_heat_loss.py  test_models.py
tests/fixtures/mcs/: PROVENANCE.md
tests/mcs_oracle/: __init__.py  formulas_patch.py  lo_recalc.py  recalc.py  test_certify.py  test_oracle.py
