[project]
name = "heat-pump-modelling"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pint>=0.25.3",
    "pvlib>=0.15.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heat_pump_modelling"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
