[project]
name = "heat-pump-modelling"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nbformat>=5.10.4",
    "pint>=0.25.3",
    "plotly>=6.8.0",
    "pvlib>=0.15.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heat_pump_modelling"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
